; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/humidity/extr_hdc100x.c_hdc100x_write_raw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/humidity/extr_hdc100x.c_hdc100x_write_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iio_chan_spec = type { i32, i32 }
%struct.hdc100x_data = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@IIO_CURRENT = common dso_local global i32 0, align 4
@HDC100X_REG_CONFIG_HEATER_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, %struct.iio_chan_spec*, i32, i32, i64)* @hdc100x_write_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hdc100x_write_raw(%struct.iio_dev* %0, %struct.iio_chan_spec* %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.iio_dev*, align 8
  %8 = alloca %struct.iio_chan_spec*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.hdc100x_data*, align 8
  %13 = alloca i32, align 4
  store %struct.iio_dev* %0, %struct.iio_dev** %7, align 8
  store %struct.iio_chan_spec* %1, %struct.iio_chan_spec** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  %14 = load %struct.iio_dev*, %struct.iio_dev** %7, align 8
  %15 = call %struct.hdc100x_data* @iio_priv(%struct.iio_dev* %14)
  store %struct.hdc100x_data* %15, %struct.hdc100x_data** %12, align 8
  %16 = load i32, i32* @EINVAL, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %13, align 4
  %18 = load i64, i64* %11, align 8
  switch i64 %18, label %69 [
    i64 129, label %19
    i64 128, label %39
  ]

19:                                               ; preds = %5
  %20 = load i32, i32* %9, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %6, align 4
  br label %72

25:                                               ; preds = %19
  %26 = load %struct.hdc100x_data*, %struct.hdc100x_data** %12, align 8
  %27 = getelementptr inbounds %struct.hdc100x_data, %struct.hdc100x_data* %26, i32 0, i32 0
  %28 = call i32 @mutex_lock(i32* %27)
  %29 = load %struct.hdc100x_data*, %struct.hdc100x_data** %12, align 8
  %30 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %8, align 8
  %31 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @hdc100x_set_it_time(%struct.hdc100x_data* %29, i32 %32, i32 %33)
  store i32 %34, i32* %13, align 4
  %35 = load %struct.hdc100x_data*, %struct.hdc100x_data** %12, align 8
  %36 = getelementptr inbounds %struct.hdc100x_data, %struct.hdc100x_data* %35, i32 0, i32 0
  %37 = call i32 @mutex_unlock(i32* %36)
  %38 = load i32, i32* %13, align 4
  store i32 %38, i32* %6, align 4
  br label %72

39:                                               ; preds = %5
  %40 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %8, align 8
  %41 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* @IIO_CURRENT, align 4
  %44 = icmp ne i32 %42, %43
  br i1 %44, label %48, label %45

45:                                               ; preds = %39
  %46 = load i32, i32* %10, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %45, %39
  %49 = load i32, i32* @EINVAL, align 4
  %50 = sub nsw i32 0, %49
  store i32 %50, i32* %6, align 4
  br label %72

51:                                               ; preds = %45
  %52 = load %struct.hdc100x_data*, %struct.hdc100x_data** %12, align 8
  %53 = getelementptr inbounds %struct.hdc100x_data, %struct.hdc100x_data* %52, i32 0, i32 0
  %54 = call i32 @mutex_lock(i32* %53)
  %55 = load %struct.hdc100x_data*, %struct.hdc100x_data** %12, align 8
  %56 = load i32, i32* @HDC100X_REG_CONFIG_HEATER_EN, align 4
  %57 = load i32, i32* %9, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %61

59:                                               ; preds = %51
  %60 = load i32, i32* @HDC100X_REG_CONFIG_HEATER_EN, align 4
  br label %62

61:                                               ; preds = %51
  br label %62

62:                                               ; preds = %61, %59
  %63 = phi i32 [ %60, %59 ], [ 0, %61 ]
  %64 = call i32 @hdc100x_update_config(%struct.hdc100x_data* %55, i32 %56, i32 %63)
  store i32 %64, i32* %13, align 4
  %65 = load %struct.hdc100x_data*, %struct.hdc100x_data** %12, align 8
  %66 = getelementptr inbounds %struct.hdc100x_data, %struct.hdc100x_data* %65, i32 0, i32 0
  %67 = call i32 @mutex_unlock(i32* %66)
  %68 = load i32, i32* %13, align 4
  store i32 %68, i32* %6, align 4
  br label %72

69:                                               ; preds = %5
  %70 = load i32, i32* @EINVAL, align 4
  %71 = sub nsw i32 0, %70
  store i32 %71, i32* %6, align 4
  br label %72

72:                                               ; preds = %69, %62, %48, %25, %22
  %73 = load i32, i32* %6, align 4
  ret i32 %73
}

declare dso_local %struct.hdc100x_data* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @hdc100x_set_it_time(%struct.hdc100x_data*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @hdc100x_update_config(%struct.hdc100x_data*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
